# pbtranslate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
src/pbtranslate/: __main__.py  ai.py  config.py  core.py  pasteboard.py
tests/testpytranslate/: conftest.py  test_core.py
